--- a/includes/api/i18n/en.json
+++ b/includes/api/i18n/en.json
@@ -1765,7 +1765,7 @@
 	"apierror-compare-relative-to-deleted": "Cannot use <kbd>torelative=$1</kbd> relative to a deleted revision.",
 	"apierror-compare-relative-to-nothing": "No 'from' revision for <var>torelative</var> to be relative to.",
 	"apierror-contentserializationexception": "Content serialization failed: $1",
-	"apierror-contenttoobig": "The content you supplied exceeds the article size limit of $1 {{PLURAL:$1|kilobyte|kilobytes}}.",
+	"apierror-contenttoobig": "The content you supplied exceeds the article size limit of $1 {{PLURAL:$1|kibibyte|kibibytes}}.",
 	"apierror-contentmodel-mismatch": "The content you supplied has <kbd>$1</kbd> content model, which differs from the current content model of the page <kbd>$2</kbd>.",
 	"apierror-copyuploadbaddomain": "Uploads by URL are not allowed from this domain.",
 	"apierror-copyuploadbadurl": "Upload not allowed from this URL.",
