--- a/languages/i18n/qqq.json
+++ b/languages/i18n/qqq.json
@@ -1382,6 +1382,7 @@
 	"badsiglinks": "Error message used on [[Special:Preferences]].",
 	"badsigsubst": "Error message used on [[Special:Preferences]].\n\nParameters:\n* $1 - example valid syntax, using the message {{msg-mw|signature}}",
 	"badsiglength": "Warning message that is displayed on [[Special:Preferences]] when trying to save a signature that is too long.\n\nParameters\n* $1 - the maximum number of characters that is allowed in a signature (multi-byte characters are counted as one character)",
+	"badsiglinebreak": "Warning message that is displayed on [[Special:Preferences]] when trying to save a signature that contains a line break.",
 	"linter-pager-bogus-image-options-details": "Table column heading",
 	"linter-pager-deletable-table-tag-details": "Table column heading",
 	"linter-pager-html5-misnesting-details": "Table column heading.",
