--- a/includes/api/i18n/en.json
+++ b/includes/api/i18n/en.json
@@ -1032,12 +1032,12 @@
 	"apihelp-query+logevents-paramvalue-prop-ids": "Adds the ID of the log event.",
 	"apihelp-query+logevents-paramvalue-prop-title": "Adds the title of the page for the log event.",
 	"apihelp-query+logevents-paramvalue-prop-type": "Adds the type of log event.",
-	"apihelp-query+logevents-paramvalue-prop-user": "Adds the user responsible for the log event.",
-	"apihelp-query+logevents-paramvalue-prop-userid": "Adds the user ID who was responsible for the log event.",
+	"apihelp-query+logevents-paramvalue-prop-user": "Adds the user responsible for the log event. If the user has been revision deleted, a <samp>userhidden</samp> property will be returned.",
+	"apihelp-query+logevents-paramvalue-prop-userid": "Adds the user ID who was responsible for the log event. If the user has been revision deleted, a <samp>userhidden</samp> property will be returned.",
 	"apihelp-query+logevents-paramvalue-prop-timestamp": "Adds the timestamp for the log event.",
-	"apihelp-query+logevents-paramvalue-prop-comment": "Adds the comment of the log event.",
-	"apihelp-query+logevents-paramvalue-prop-parsedcomment": "Adds the parsed comment of the log event.",
-	"apihelp-query+logevents-paramvalue-prop-details": "Lists additional details about the log event.",
+	"apihelp-query+logevents-paramvalue-prop-comment": "Adds the comment of the log event. If the comment has been revision deleted, a <samp>commenthidden</samp> property will be returned.",
+	"apihelp-query+logevents-paramvalue-prop-parsedcomment": "Adds the parsed comment of the log event. If the comment has been revision deleted, a <samp>commenthidden</samp> property will be returned.",
+	"apihelp-query+logevents-paramvalue-prop-details": "Lists additional details about the log event. If the log event has been revision deleted, an <samp>actionhidden</samp> property will be returned.",
 	"apihelp-query+logevents-paramvalue-prop-tags": "Lists tags for the log event.",
 	"apihelp-query+logevents-param-type": "Filter log entries to only this type.",
 	"apihelp-query+logevents-param-action": "Filter log actions to only this action. Overrides <var>$1type</var>. In the list of possible values, values with the asterisk wildcard such as <kbd>action/*</kbd> can have different strings after the slash (/).",
