Allow top-right search form target to be modifiable
Before this patch, if 'search' is in the request params then we always
go to Special:Search. Also, the 'title' param on the top-right search
form is always set to Special:Search, which means that form always goes
to Special:Search too.

In order to allow the search form to go to a different page, this
patch:
1. moves the hardcoded redirect to Special:Search based on 'search' in
the request params, so that it only happens if we cannot determine
the page title in the usual way
2. adds a setter for the default search page title in \Skin, so that
it can be set in a hook

Bug: T273879
Change-Id: If62573d19ca76ed1db53a5117182172233e514ab

--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -1094,6 +1094,7 @@
 	"prefs-setemail": "Set an email address",
 	"prefs-email": "Email options",
 	"prefs-rendering": "Appearance",
+	"prefs-searchmisc": "General",
 	"saveprefs": "Save",
 	"restoreprefs": "Restore all default settings (in all sections)",
 	"prefs-editing": "Editing",
