jquery.tablesorter: Follow-up 0c01cbf93
* Use plain() so as to not support (and pay for) msg parser syntax.
* Use warn() instead of error() this is not a software issue.
* Improve message to not refer to "This table" without context,
  also avoid "article" phrase which has been deprecated in interface
  messages for a few years.

Bug: T265503
Change-Id: Ieb4b12bb4995b7e408a05f6934b12cc646f23b01

--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -294,7 +294,7 @@
 	"sort-descending": "Sort descending",
 	"sort-ascending": "Sort ascending",
 	"sort-initial": "Sort initial",
-	"sort-rowspan-error": "This table has a rowspan attribute that spans more rows than the table actually has. You can fix this by editing the article.",
+	"sort-rowspan-error": "This page contains a table with a rowspan attribute that spans more rows than the table actually has. You can fix this by editing the page.",
 	"nstab-main": "Page",
 	"nstab-user": "{{GENDER:$1|User page}}",
 	"nstab-media": "Media page",
