--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -3934,6 +3934,7 @@
 	"htmlform-title-not-exists": "$1 does not exist.",
 	"htmlform-user-not-exists": "<strong>$1</strong> does not exist.",
 	"htmlform-user-not-valid": "<strong>$1</strong> isn't a valid username.",
+	"htmlform-tag-not-allowed": "$1 is not an allowed tag",
 	"rawmessage": "$1",
 	"logentry-delete-delete": "$1 {{GENDER:$2|deleted}} page $3",
 	"logentry-delete-delete_redir": "$1 {{GENDER:$2|deleted}} redirect $3 by overwriting",
@@ -4204,6 +4205,7 @@
 	"mw-widgets-titleinput-description-redirect": "redirect to $1",
 	"mw-widgets-categoryselector-add-category-placeholder": "Add a category...",
 	"mw-widgets-usersmultiselect-placeholder": "Add more...",
+	"mw-widgets-tagmultiselect-placeholder": "Add more...",
 	"mw-widgets-titlesmultiselect-placeholder": "Add more...",
 	"date-range-from": "From date:",
 	"date-range-to": "To date:",
