--- a/languages/i18n/qqq.json
+++ b/languages/i18n/qqq.json
@@ -4156,6 +4156,7 @@
 	"htmlform-title-not-exists": "Error message shown if the page title provided by the user does not exist. $1 is the page title.",
 	"htmlform-user-not-exists": "Error message shown if a user with the name provided by the user does not exist. $1 is the username.",
 	"htmlform-user-not-valid": "Error message shown if the name provided by the user isn't a valid username. $1 is the username.",
+	"htmlform-tag-not-allowed": "Error message shown if the tag provided by the user is not an allowed value. $1 is the tag.",
 	"rawmessage": "{{notranslate}} Used to pass arbitrary text as a message specifier array",
 	"logentry-delete-delete": "{{Logentry|[[Special:Log/delete]]}}",
 	"logentry-delete-delete_redir": "{{Logentry|[[Special:Log/delete]]}}",
@@ -4426,6 +4427,7 @@
 	"mw-widgets-titleinput-description-redirect": "Description label for a redirect in the title input widget.",
 	"mw-widgets-categoryselector-add-category-placeholder": "Placeholder displayed in the category selector widget after the capsules of already added categories.",
 	"mw-widgets-usersmultiselect-placeholder": "Placeholder displayed in the input field, where new usernames are entered",
+	"mw-widgets-tagmultiselect-placeholder": "Placeholder displayed in the input field, where new tags are entered",
 	"mw-widgets-titlesmultiselect-placeholder": "Placeholder displayed in the input field, where new titles are entered",
 	"date-range-from": "Label for an input field that specifies the start date of a date range filter.",
 	"date-range-to": "Label for an input field that specifies the end date of a date range filter.",
