--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -3517,7 +3517,7 @@
 	"autosumm-changed-redirect-target": "Changed redirect target from [[$1]] to [[$2]]",
 	"autosumm-new": "Created page with \"$1\"",
 	"autosumm-newblank": "Created blank page",
-	"autoblock_whitelist": "",
+	"block-autoblock-exemptionlist": "",
 	"size-bytes": "$1 {{PLURAL:$1|byte|bytes}}",
 	"size-kilobytes": "$1 KB",
 	"size-megabytes": "$1 MB",
