Update label and placeholder text for Special:Block target
Bug: T278980
Bug: T263638
Change-Id: I56e1c241308b4a92ead8a8183adb775e8c78638b

--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -2751,7 +2751,8 @@
 	"block-options": "Additional options:",
 	"block-prevent-edit": "Editing",
 	"block-reason": "Reason:",
-	"block-target": "Username or IP address:",
+	"block-target": "Username, IP address, or IP range:",
+	"block-target-placeholder": "UserName, 1.1.1.42, or 1.1.1.42/16",
 	"unblockip": "Unblock user",
 	"unblockiptext": "Use the form below to restore write access to a previously blocked IP address or username.",
 	"ipusubmit": "Remove this block",
