--- a/languages/i18n/qqq.json
+++ b/languages/i18n/qqq.json
@@ -2974,6 +2974,7 @@
 	"block-prevent-edit": "Label for the checkbox for specifying an editing block in [[Special:Block]].",
 	"block-reason": "Label for the input for specifying the reason for a block on [[Special:Block]]\n{{Identical|Reason}}",
 	"block-target": "Label for the input for specifying the target of a block on [[Special:Block]]",
+	"block-target-placeholder": "Placeholder text for the input specifying the target of a block on [[Special:Block]]",
 	"unblockip": "Used as title and legend for the form in [[Special:Unblock]].",
 	"unblockiptext": "Used in the {{msg-mw|Unblockip}} form on [[Special:Unblock]].",
 	"ipusubmit": "Used as button text on [{{canonicalurl:Special:BlockList|action=unblock}} Special:BlockList?action=unblock]. To see the message:\n* Go to [[Special:BlockList]]\n* Click \"unblock\" for any block (but you can only see \"unblock\" if you have administrator rights)\n* It is now the button below the form",
