Don't allow blocking on pages that don't exist
Bug: T269341
Change-Id: I5836d72960c3f9df874ac3348602e3f8e6322afa

--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -2848,6 +2848,7 @@
 	"softblockrangesreason": "Anonymous contributions are not allowed from your IP address ($1). Please log in.",
 	"xffblockreason": "An IP address present in the X-Forwarded-For header, either yours or that of a proxy server you are using, has been blocked. The original block reason was: $1",
 	"cant-see-hidden-user": "The user you are trying to block has already been blocked and hidden.\nSince you do not have the hideuser right, you cannot see or edit the user's block.",
+	"cant-block-nonexistent-page": "You cannot block a user from $1 because the page does not exist",
 	"ipbblocked": "You cannot block or unblock other users because you are yourself blocked.",
 	"ipbnounblockself": "You are not allowed to unblock yourself.",
 	"ipb-default-expiry": "",
