--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -325,7 +325,7 @@
 	"missingarticle-rev": "(revision#: $1)",
 	"missingarticle-diff": "(Diff: $1, $2)",
 	"readonly_lag": "The database has been automatically locked while the replica database servers catch up to the master",
-	"nonwrite-api-promise-error": "The 'Promise-Non-Write-API-Action' HTTP header was sent but the request was to an API write module.",
+	"nonwrite-api-promise-error": "The 'Promise-Non-Write-API-Action' HTTP header was sent but the request was not an API request.",
 	"timeouterror": "Server timed out",
 	"timeouterror-text": "The maximum request time of $1 {{PLURAL:$1|second|seconds}} was exceeded.",
 	"internalerror": "Internal error",
