Revert "Localisation updates from https://translatewiki.net."
This reverts commit 07bdda222237a5564f4fc134eca31e3c4415f12b.

Reason for revert: Removed cant-block-nonexistent-page from qqq.json which breaks banana linter. Let's revert and get a fresh export next time

Change-Id: Id09d60bf5975581ad0b0ddec34238de304e3a960

--- a/languages/i18n/da.json
+++ b/languages/i18n/da.json
@@ -2202,7 +2202,6 @@
 	"notanarticle": "Ikke en artikel",
 	"notvisiblerev": "Versionen er blevet slettet",
 	"watchlist-details": "{{PLURAL:$1|$1 side er|$1 sider er}} på din overvågningsliste (plus diskussionssider).",
-	"watchlist-expiry-days-left": "{{PLURAL:$1|$1 dag|$1 dage}} tilbage",
 	"watchlist-expiry-hours-left": "Få timer tilbage",
 	"wlheader-enotif": "E-mail-underretning er slået til.",
 	"wlheader-showupdated": "Sider, der er ændret siden dit sidste besøg, er vist med <strong>fed skrift</strong>.",
@@ -2484,7 +2483,6 @@
 	"block-prevent-edit": "Redigering",
 	"block-reason": "Begrundelse:",
 	"block-target": "Brugernavn eller IP-adresse:",
-	"block-target-placeholder": "BrugerNavn, 1.1.1.42, eller 1.1.1.42/16",
 	"unblockip": "Ophæv blokering af bruger",
 	"unblockiptext": "Brug formularen herunder for at gendanne skriveadgangen for en tidligere blokeret IP-adresse eller bruger.",
 	"ipusubmit": "Ophæv blokeringen",
@@ -2541,7 +2539,7 @@
 	"emaillink": "send e-mail",
 	"autoblocker": "Du er automatisk blokeret, fordi din IP-adresse for nylig er blevet brugt af \"[[User:$1|$1]]\".\nBegrundelsen for blokeringen af $1 er \"$2\".",
 	"blocklogpage": "Blokeringslog",
-	"blocklog-showlog": "Denne {{GENDER:$1|bruger}} har tidligere været blokeret.\nBlokeringsloggen vises nedenfor som reference:",
+	"blocklog-showlog": "Denne bruger har tidligere været blokeret.\nBlokeringsloggen vises nedenfor som reference:",
 	"blocklog-showsuppresslog": "Denne bruger har tidligere været blokeret og skjult.\nSkjulningsloggen vises nedenfor som reference:",
 	"blocklogentry": "blokerede [[$1]] med $2 som udløbstid $3",
 	"reblock-logentry": "ændrede blokeringsindstillinger for [[$1]] med $2 som udløbstid $3",
@@ -3482,7 +3480,6 @@
 	"mw-widgets-titleinput-description-redirect": "omdiriger til $1",
 	"mw-widgets-categoryselector-add-category-placeholder": "Tilføj en kategori...",
 	"mw-widgets-usersmultiselect-placeholder": "Tilføj flere ...",
-	"mw-widgets-tagmultiselect-placeholder": "Tilføj flere...",
 	"mw-widgets-titlesmultiselect-placeholder": "Tilføj flere ...",
 	"date-range-from": "Fra dato:",
 	"date-range-to": "Til dato:",
