--- a/languages/i18n/dag.json
+++ b/languages/i18n/dag.json
@@ -1,7 +1,6 @@
 {
 	"@metadata": {
 		"authors": [
-			"Abdul Waris",
 			"Achiri Bitamsimli",
 			"Alhaj Darajaati",
 			"Alhassan Mohammed Awal",
@@ -13,7 +12,6 @@
 			"Dhee jah",
 			"Din-nani1",
 			"Dnshitobu",
-			"Hajara55",
 			"Hidrash",
 			"Karimbaasani",
 			"Masssly",
@@ -24,24 +22,17 @@
 			"Yakubu Fadilatu"
 		]
 	},
-	"tog-hideminor": "Suɣami mali niŋ din bi galisi maa ka chɛ punpuŋɔ taɣabu maa",
-	"tog-hidecategorization": "Sɔɣimi pubu yaɣa",
-	"tog-extendwatchlist": "Yeligimi ani yuuni binshɛŋa din yan wuhi a taɣibu zaa, amaa ka din na yoli niŋ koŋko",
-	"tog-usenewrc": "Laɣimi taɣibu nim n-doli yaɣili din be taɣiri shɛŋa din na yoli niŋ ni bini lihiri shɛli",
+	"tog-hideminor": "Suɣami gambehi maa ka chɛ puunpuŋ taɣabu maa",
+	"tog-hidecategorization": "Sogmi gbang yaga",
+	"tog-extendwatchlist": "Yeligimi nema ka di wuhi tagibu kam pa din dii yoli tagi",
+	"tog-usenewrc": "Lagingu tagibu n-doli gbang tagibu din yoli tagibu mini nema ni",
 	"tog-numberheadings": "Dintoli kalinli yɛlizuɣu",
-	"tog-editondblclick": "Malisabi yaɣa din-be dihi-parim-ŋo ni",
+	"tog-editondblclick": "Malisabi yɛɣa din-be dihi-parim-ŋo ni",
 	"tog-editsectiononrightclick": "Dihimi nudirigu yɛɣili kadi ti-soli ka yaɣili-ŋɔ malisabi niŋ tabata",
-	"tog-minordefault": "Dalimmi mali niŋ zaa din bora ni nyɛ shɛm",
-	"tog-previewontop": "Wuhimi daŋlihi pɔi mali niŋ adaka bila",
 	"tog-previewonfirst": "Wuhimi ma n johi lihi n tuuli malniŋ ni",
-	"tog-shownumberswatching": "Wuhimi kalinli ŋan lihiri ban mali akaunti sulinsi",
-	"tog-oldsig": "A yuli shara goribu",
-	"tog-watchlisthideown": "Sohami n malniŋ ka che ni yuuni sheŋa maa",
-	"tog-watchlisthidecategorization": "Sɔɣimi pubu yaɣa",
 	"tog-showhiddencats": "Yihimi yelshɛŋa ŋan-sɔhi poloni",
 	"underline-always": "Sahakam",
-	"underline-never": "na Ʒin niŋ",
-	"underline-default": "Gban saɣambu",
+	"underline-never": "na ʒi m-birigi",
 	"editfont-style": "Malniŋ polo sabbu sitaayi",
 	"editfont-sansserif": "Sans-serif sabbu",
 	"editfont-serif": "Serif sabbu",
@@ -102,16 +93,16 @@
 	"may-date": "Silmin Goli May $1",
 	"june-date": "Silmin Goli $1",
 	"july-date": "Silmin Goli $1",
-	"august-date": "Silmin Goli August $1",
-	"september-date": "Silmin goli September $1",
+	"august-date": "Silmin Goli $1",
+	"september-date": "September $1",
 	"october-date": "Silmin goli October $1",
 	"november-date": "Silmin goli November $1",
-	"december-date": "Silmin goli December $1",
+	"december-date": "Silmin goli december$1",
 	"period-am": "AM",
 	"period-pm": "PM",
 	"pagecategories": "{{PLURAL:$1|Pubu|Pubu pubu}}",
 	"category_header": "Yaɣa din pu do di ko \"$1\"",
-	"hidden-category-category": "Pubu din soɣi",
+	"hidden-category-category": "Yaɣa shaŋa din soɣi",
 	"about": "Din jɛndili",
 	"article": "Yɛlikpana yaɣili",
 	"cancel": "Nyahima",
@@ -122,7 +113,7 @@
 	"anontalk": "Yɛtɔɣa",
 	"navigation": "Goŋgili",
 	"and": "&#32;ni",
-	"faq": "Biɛɣu kulo bohisi ni labisibu",
+	"faq": "Biɛɣu kulo bohimi bohisi",
 	"actions": "Niŋsim",
 	"namespaces": "Yuli palti",
 	"variants": "Walgimsim",
@@ -138,42 +129,40 @@
 	"searcharticle": "Chama",
 	"history": "Yaɣili ŋɔ tariihi",
 	"history_short": "Taarihi",
-	"history_small": "taarihi",
+	"history_small": "Taarihi",
 	"updatedmarker": "di taɣimi tum saha shɛli dini vihi",
-	"printableversion": "Yaɣi sheli din ni tooi paɣi",
+	"printableversion": "Yaɣi sheli din ni tooi yaɣi pa gbaŋ zuɣu",
 	"permalink": "Kpalinkpaa soli",
-	"print": "Paɣibu",
+	"print": "Ŋmabu",
 	"view": "Lihibu",
 	"view-foreign": "Lihimi li ni $1",
-	"edit": "Mali niŋ",
-	"edit-local": "Mali niŋ dundɔŋ buɣisibu",
+	"edit": "Maliniŋ",
 	"create": "Namma",
-	"create-local": "Pahimi dundɔŋni buɣisibu",
 	"delete": "Yihima",
-	"undelete_short": "Diyihi{{PLURAL:$1|mali niŋ yini|$1 mali niŋ nima}}",
-	"viewdeleted_short": "Lihima{{PLURAL:$1|mali niŋ yini yihibu|$1 mali niŋ shɛli din}}",
+	"undelete_short": "Diyihi{{PLURAL:$1|}}gadama yini$1 gadama",
+	"viewdeleted_short": "Lihima{{PLURAL:$1|}}yini yihimi malzal$1 yihimi malzal",
 	"protect": "Gubu",
 	"protect_change": "taɣima",
 	"unprotect": "Taɣimi gubu",
 	"newpage": "Yɛtɔɣa piligu",
 	"talkpagelinktext": "yelma",
-	"specialpage": "Yaɣili gahindili",
+	"specialpage": "Sirli gahindili",
 	"personaltools": "Amaŋmaŋ tuma niɛma",
 	"talk": "Shaawara gbaaibu",
 	"views": "Niribi nyabu",
 	"toolbox": "Kpatuɣa",
 	"cactions": "Lihimi pahi",
-	"imagepage": "Yulimi faal Yaɣili",
-	"mediawikipage": "Yulimi satarili yaɣili",
-	"templatepage": "Lihimi templaati yaɣili",
+	"imagepage": "Yulimi lahabali Piligu Yaɣili",
+	"mediawikipage": "Lihimi satarili sirli",
+	"templatepage": "Yulimi tɛmpleti yaɣili",
 	"viewhelppage": "Lihimi sɔŋbu sirli",
 	"categorypage": "Yulimi pubu Yaɣili",
-	"viewtalkpage": "Yulimi shaawara gbaaibu",
+	"viewtalkpage": "Lihimi shaawara gbaaibu",
 	"otherlanguages": "Bala din pahi",
 	"redirectedfrom": "($1 ka di tom m-bahina)",
 	"redirectpagesub": "Lab nbuɣisi yaɣali",
 	"redirectto": "Labi wuhi kpa",
-	"lastmodifiedat": "Bɛ daa niŋ la yaɣili ŋɔ mali niŋ la $1, $2.",
+	"lastmodifiedat": "Bɛ daa niŋ la yaɣili ŋɔ malniŋ la $1, $2.",
 	"viewcount": "Bɛ pun yuli yaɣili",
 	"protectedpage": "Yaɣili shɛli bɛ ni gu",
 	"jumpto": "Yiɣi chaŋ:",
@@ -185,29 +174,26 @@
 	"poolcounter-usage-error": "Zaŋ tum gadama: $1",
 	"aboutsite": "Din jendi {{SITENAME}}",
 	"aboutpage": "Project:Lahabali",
-	"copyrightpage": "Sulinsi",
 	"currentevents": "Pumpɔŋɔ na yɛla",
 	"currentevents-url": "Project: Pumpɔŋɔ na yɛla",
-	"disclaimers": "Nuu yihiriba",
+	"disclaimers": "Nuu yihibu",
 	"disclaimerpage": "Project:Sokam nuu yihibu",
 	"edithelp": "Malisabi sɔŋsim",
 	"helppage-top-gethelp": "Sɔŋsim",
 	"mainpage": "Solɔɣu",
 	"mainpage-description": "Solɔɣu",
-	"policy-url": "Zalisi",
 	"portal": "Mabiligu dundɔŋ",
 	"portal-url": "Project:Mabiligu dundɔŋ",
 	"privacy": "Ashili zalikpana",
-	"privacypage": "Project:Ashili zalisi",
+	"privacypage": "Project:Ashili zalisi mini alkawle",
 	"badaccess": "Ti soli chirimbu",
-	"badaccess-group0": "A ku tooi niŋ ani bɔri ni a niŋ sheli maa",
 	"ok": "Tɔ",
 	"retrievedfrom": "Di yila \"$1\"",
 	"youhavenewmessagesmulti": "A yɛ satarili paali$1",
-	"editsection": "Mali niŋ",
-	"editold": "Mali niŋ",
-	"viewsourceold": "Yulimi di nyabili",
-	"editlink": "Mali niŋ",
+	"editsection": "maliniŋ",
+	"editold": "malniŋ",
+	"viewsourceold": "Lihimi di nyabili",
+	"editlink": "malniŋ",
 	"viewsourcelink": "lihimi di nyabili",
 	"editsectionhint": "Mali sabi yaɣili: $1",
 	"toc": "Din be di puuni",
@@ -215,14 +201,10 @@
 	"hidetoc": "Sɔɣi",
 	"collapsible-collapse": "Liɣibu",
 	"collapsible-expand": "Yelgibu",
-	"confirmable-confirm": "A dihi tabli",
 	"confirmable-yes": "Yelmaŋli",
 	"confirmable-no": "Pa yelmaŋli",
 	"viewdeleted": "Yulim $1?",
 	"red-link-title": "$1 (yaɣili ŋɔ maa kani)",
-	"sort-descending": "Pemli zuɣsaa zan chaŋ gbunni",
-	"sort-ascending": "Pɛmili dɔli zaɣ' bihi hali ni zaɣ' kara",
-	"sort-initial": "Pemli ni yuya bachi pilgu nimma",
 	"nstab-main": "Yaɣili",
 	"nstab-special": "Yaɣili gahindili",
 	"nstab-project": "Tuma yaɣili",
@@ -241,16 +223,12 @@
 	"missingarticle-rev": "(Labtɛi#:$1)",
 	"internalerror": "Puuni chirimbu",
 	"internalerror_info": "Puuni chirimbu:$1",
-	"filecopyerror": "Di ku tooi yaai kolgu maa \"$1\" zan chaŋ \"$2\".",
-	"filerenameerror": "Di ku tooi lahi tahi kolgu maa yuli zan chaŋ \"$1\" Hal ni \"$2\".",
-	"filedeleteerror": "kolgu maa ku tooi nyahi \"$1\"",
 	"filenotfound": "“$1” kɔligu bi tooi nya",
 	"cannotdelete-title": "“$1\" yaɣili ku tooi yihi",
 	"badtitle": "Yu biɛɣu",
 	"viewsource": "Lihimi din yina shɛli",
 	"viewsource-title": "Lihimi nyabli zaŋti $1",
 	"viewsourcetext": "A ni tooi lihi ka yaai yaɣili ŋɔ nyabli",
-	"customjsprotected": "A ka soli ni a mal Sabi Java sabbu nim ŋo dama so dabam dahalal yeltɔha n be dini",
 	"ns-specialprotected": "Yaɣa din gahim ku tooi maliniŋ",
 	"exception-nologin": "Bi kpɛ",
 	"logging-out-notify": "Bɛ kparaami bahi, dimsuɣlo kuhima",
@@ -303,12 +281,10 @@
 	"createacct-benefit-body1": "{{PLURAL:$1Malniŋ|Malniŋ}}",
 	"createacct-benefit-body2": "{{PLURAL:$1|yaɣali|yaɣa}}",
 	"createacct-benefit-body3": "Puunpɔŋ{{PLURAL:$1|tuhara|tuhariba}}",
-	"badretype": "Paswedi shɛli ani pɛhi maa bi maachi",
 	"loginerror": "Kpebu muɣisigu",
 	"createacct-error": "Accounti nambu chirimbu",
 	"createaccounterror": "Bi tooi yoogi akaunti:$1",
 	"loginsuccesstitle": "Kpeya",
-	"emailconfirmlink": "Yulimi a email addressi ka dihi tabli",
 	"accountcreated": "Akawnti yooya",
 	"loginlanguagelabel": "Balli: $1",
 	"pt-login": "Kpɛma",
@@ -317,7 +293,6 @@
 	"pt-createaccount": "Yoomi akaunt",
 	"pt-userlogout": "Yima",
 	"changepassword": "Taɣami paasewɛdi",
-	"resetpass_header": "Taɣmi akaunti paswedi",
 	"oldpassword": "Ashili bihi zaɣ'kurli",
 	"newpassword": "Ashili bihi zaɣ'palli",
 	"retypenew": "Labsabi ashili bihi zaɣ'palli",
@@ -344,7 +319,6 @@
 	"minoredit": "Ŋɔ nyɛla mali niŋ din be galsi",
 	"watchthis": "Yulili kuligi ŋɔ",
 	"savearticle": "Zaŋ yaɣili kpehi",
-	"savechanges": "Malmi taɣbu soŋ",
 	"publishpage": "Zaŋ wuhi salo yaɣili",
 	"publishchanges": "Zaŋ wuhi salo taɣibu nima",
 	"savearticle-start": "Zalmi yaɣali",
@@ -358,7 +332,6 @@
 	"missingcommenttext": "Kpahimi pahagu",
 	"blockednoreason": "Daliri shɛli biti",
 	"whitelistedittext": "Dimisuɣulo $1 malniŋ yaɣa",
-	"nosuchsectiontitle": "N Ku toi nye yaɣli maa",
 	"loginreqtitle": "Kpɛbu nyɛla talahi",
 	"loginreqlink": "kpɛma",
 	"accmailtitle": "Paswɛdi chaŋ ya",
@@ -380,16 +353,12 @@
 	"moveddeleted-notice": "Yaɣili ŋɔ maa kani.\nYaɣili binyera yihibu, di gubu ni di kpuɣibu zaa dola gbunni ŋɔ domini kundivihira zuɣu.",
 	"edit-conflict": "Malniŋ zabli",
 	"postedit-confirmation-created": "Yaɣali maa nam ya",
-	"postedit-confirmation-restored": "Yaɣli maa labina",
 	"postedit-confirmation-published": "A mali sabla du pohim zugu",
-	"defaultmessagetext": "Din nyɛ shɛm satarili sabbu",
 	"slot-name-main": "Mammaŋa",
 	"content-model-wikitext": "wikitɛɣs",
 	"content-json-empty-object": "Binshɛli ka dini",
 	"viewpagelogs": "Lihimi laasabu din jɛndi yaɣili ŋɔ",
-	"currentrev": "Nayoli labtɛɛi",
 	"currentrev-asof": "Mali sabi din yoli niŋ kamani :$1",
-	"revisionasof": "Labiyuli kamani $1",
 	"previousrevision": "Mali sabi kurili",
 	"nextrevision": "Mali sabi palli",
 	"currentrevisionlink": "Mali sabi din yoli niŋ",
@@ -404,8 +373,6 @@
 	"rev-delundel": "taɣimi nyɛbu",
 	"rev-showdeleted": "Wuhi",
 	"revdelete-show-file-submit": "Ein",
-	"revdelete-hide-text": "Labi vihi satarli",
-	"revdelete-radio-same": "Miri ka a taɣi",
 	"revdelete-radio-set": "Sɔɣisinli",
 	"revdelete-radio-unset": "Yi polo",
 	"revdelete-log": "Dinzuɣu",
@@ -415,13 +382,10 @@
 	"revdelete-reasonotherlist": "Daliri shɛŋa",
 	"revdelete-edit-reasonlist": "Taɣabu nyahabu daliri",
 	"mergehistory-from": "Soya yaɣali",
-	"mergehistory-no-source": "Nyabli yaɣili pa din beni",
 	"mergehistory-reason": "Daliri",
 	"mergelog": "Laɣimbu laasabu",
-	"history-title": "Labtɛɛi Taarihi",
-	"difference-title": "Waligimsim din be labtɛɛi",
 	"difference-multipage": "Walgimsim dee by yaɣa puuni",
-	"lineno": "Vuɣu $1:",
+	"lineno": "Vuɣu $1",
 	"editundo": "labisi",
 	"diff-empty": "(Di Ka waliginsim)",
 	"searchresults": "Vihimi shahira",
@@ -441,22 +405,17 @@
 	"searchprofile-images-tooltip": "Vihimi n-bo faali nima",
 	"search-result-size": "$1 ({{PLURAL:$2|1 bachi|$2 bachinima}})",
 	"search-section": "(section $1)",
-	"search-category": "Pubu",
 	"search-suggest": "A wuhimi ni: $1",
 	"search-interwiki-more": "(pahi ma)",
 	"search-relatedarticle": "Nkpini",
 	"searchrelated": "Dinŋahindi",
 	"searchall": "zaa",
 	"search-showingresults": "{{PLURAL:$4|Result <strong>$1</strong> of <strong>$3</strong>|Results <strong>$1 – $2</strong> of <strong>$3</strong>}}",
-	"powersearch-legend": "Vihibu din ti tooni",
 	"powersearch-togglelabel": "Vihima:",
 	"powersearch-toggleall": "Zaa",
 	"powersearch-togglenone": "Kadi shɛli",
 	"mypreferences": "Suhiyurilim",
-	"prefs-edits": "Kalinli mali niŋ",
 	"prefs-skin": "Gbaŋ",
-	"skin-preview": "Daŋ yuli",
-	"prefs-user-pages": "ŋun su yaɣa",
 	"prefs-rc": "Punpɔŋɔ taɣabu",
 	"prefs-resetpass": "Taɣami paasiwɛdi",
 	"prefs-rendering": "Yi palo",
@@ -494,7 +453,6 @@
 	"group": "Laɣiŋgu:",
 	"right-read": "Karimmi yaɣanima",
 	"right-edit": "Malimi yaɣa",
-	"right-writeapi": "API sabibu bukaata",
 	"right-delete": "Yahimi yaɣanima",
 	"grant-createeditmovepage": "Yoma,ka mali ka lahi vuui yaɣa",
 	"grant-import": "Teebu sheŋa bi ni zaŋ kpehina",
@@ -507,7 +465,6 @@
 	"recentchanges": "Din na yoli taɣi",
 	"recentchanges-label-newpage": "Malniŋ ŋɔ maa namla yaɣili zaɣa palli",
 	"recentchanges-label-minor": "Ŋɔ maa nyɛla malniŋ din be galisi",
-	"recentchanges-label-bot": "Ninsal'sɔɣirili m malniŋ",
 	"recentchanges-legend-heading": "<strong>Legend:</strong>",
 	"recentchanges-submit": "Wuhima",
 	"rcfilters-activefilters-hide": "Sɔɣabu",
@@ -589,7 +546,7 @@
 	"contributions-title": "ŋun su tohibu zaŋti $1",
 	"mycontris": "Tohibu",
 	"anoncontribs": "Tohigu",
-	"contribsub2": "Zaŋ ti {{GENDER:$3|$1}} ($2)",
+	"contribsub2": "Zaŋ ti{GENDER:$3|$1}}($2)",
 	"uctop": "Din na chana",
 	"sp-contributions-uploads": "Bɛ ni bahi shɛŋa",
 	"sp-contributions-logs": "Kpebu",
@@ -681,7 +638,6 @@
 	"nextdiff": "Malniŋ palli palli",
 	"show-big-image": "Faal maa maŋmaŋa",
 	"show-big-image-preview": "Jɔhiyuli maa galisim:$1.",
-	"show-big-image-other": "Din pahi",
 	"metadata": "Ben ŋɔ lahabali",
 	"monthsall": "zaa",
 	"imgmultipagenext": "Yaɣili din pahi",
