--- a/languages/i18n/nia.json
+++ b/languages/i18n/nia.json
@@ -229,8 +229,8 @@
 	"mainpage": "Olayama",
 	"mainpage-description": "Olayama",
 	"policy-url": "Project:Kebijakan",
-	"portal": "Bawagöli zato",
-	"portal-url": "Project:Bawagöli zato",
+	"portal": "Portal gorahua",
+	"portal-url": "Project:Portal gorahua",
 	"privacy": "Kebijakan privasi",
 	"privacypage": "Project:Kebijakan privasi",
 	"badaccess": "Sifasala: lö wanehe",
