--- a/languages/i18n/yue.json
+++ b/languages/i18n/yue.json
@@ -490,7 +490,7 @@
 	"wrongpasswordempty": "你都未入密碼，唔該再試多次啦。",
 	"passwordtooshort": "你嘅密碼最少要有$1個半形字元。",
 	"passwordtoolong": "密碼唔可以長過{{PLURAL:$1|1個字元|$1個字元}}。",
-	"passwordincommonlist": "你輸入咗嘅密碼好常見。請揀過個獨一無二啲嘅密碼。",
+	"passwordincommonlist": "你輸入嘅密碼好多人都用，請揀過一個特別啲嘅密碼。",
 	"password-name-match": "你嘅密碼一定要同你嘅用戶名唔一樣。",
 	"password-substring-username-match": "你嘅密碼唔可以出現喺你嘅用戶名入面。",
 	"password-login-forbidden": "呢個用戶名同密碼嘅利用係畀人禁止嘅。",
@@ -3248,7 +3248,6 @@
 	"edit-error-short": "出錯: $1",
 	"edit-error-long": "出錯：\n\n$1",
 	"specialmute-submit": "確認",
-	"mute-preferences": "靜音設定",
 	"revid": "修訂 $1",
 	"gotointerwiki": "離開 {{SITENAME}}",
 	"passwordpolicies": "密碼政策",
