--- a/languages/i18n/om.json
+++ b/languages/i18n/om.json
@@ -148,7 +148,7 @@
 	"mypage": "Fuula",
 	"mytalk": "Dubbadhu",
 	"anontalk": "Dubbadhu",
-	"navigation": "Imala",
+	"navigation": "Kallattii",
 	"and": "&#32;fi",
 	"actions": "Gochoota",
 	"namespaces": "Iddoowwan maqaa",
@@ -216,7 +216,7 @@
 	"aboutpage": "Project:Waa'ee",
 	"copyrightpage": "{{ns:project}}:Mirga waraabbi",
 	"currentevents": "Taateewwan ammaa",
-	"currentevents-url": "Project:Taateewwan ammaa",
+	"currentevents-url": "Proojektii:Taateewwan ammaa",
 	"disclaimers": "Waakkii",
 	"disclaimerpage": "Project:Waakkii waliigalaa",
 	"edithelp": "Gargaarsa gulaaluu",
@@ -253,7 +253,7 @@
 	"sort-ascending": "Irraa olee fooyi",
 	"sort-initial": "Kan jalqabaa fooyi",
 	"nstab-main": "Fuulbarruu",
-	"nstab-user": "{{GENDER:$1|Fuulbarruu fayyadamaa}}",
+	"nstab-user": "Fuula fayyadamaa",
 	"nstab-media": "Fuula miidiyaa",
 	"nstab-special": "Fuula addaa",
 	"nstab-project": "Fuula piroojecktii",
@@ -347,7 +347,7 @@
 	"viewpagelogs": "Fuula kanaaf galmeewwan ilaali",
 	"currentrev-asof": "Foyyeeffata reefuu hanga $1",
 	"revisionasof": "Foyyeeffata hamma $1",
-	"revision-info": "Keessa deebiin kun gaafa $1 {{GENDER:$6|$2 irratti}}$7",
+	"revision-info": "Foyyefata {{GENDER:$6|$2}} hanga $1",
 	"previousrevision": "Foyyeeffata duraani",
 	"nextrevision": "Foyyeeffata daran haaraa →",
 	"currentrevisionlink": "Foyyeeffata reefuu",
@@ -389,7 +389,7 @@
 	"prefs-searchmisc": "Waliigala",
 	"yourrealname": "Maqaa Dhugaa:",
 	"yourlanguage": "Afaan:",
-	"yourvariant": "Qabiyyee afaani addaa:",
+	"yourvariant": "Jijjirama:",
 	"grant-basic": "Mirga bu'uuraa",
 	"newuserlogpage": "Galmee uumama fayyadamaa",
 	"action-edit": "Fuula kana gulaali",
@@ -491,7 +491,7 @@
 	"namespace": "Iddoo maqaa:",
 	"blanknamespace": "(Ijoo)",
 	"contributions": "Gumaacha fayyadamaa",
-	"tool-link-contributions": "{{GENDER:hirmaannawwan Fayyadamaa|$1}}",
+	"tool-link-contributions": "{{GENDER:$1|Fayyadamaa}} gumaacha",
 	"contributions-title": "Gumaacha fayyadamaa $1",
 	"mycontris": "Gumaacha",
 	"anoncontribs": "Gumaacha",
@@ -595,10 +595,10 @@
 	"feedback-thanks-title": "Galatoomi!",
 	"searchsuggest-search": "{{SITENAME}} barbaadi",
 	"pagelanguage": "Afaan fuula kanaa jijjiiri",
-	"mw-widgets-abandonedit": "Ati murkanoo odoo jijjiirraa hin olkaayin gulaalchaa keessaa ba'uu barbaaddaa?",
-	"mw-widgets-abandonedit-discard": "Gulaalawwan gati",
+	"mw-widgets-abandonedit": "Odoo jijjiiraa hin olkaayin fuula gulaalchaa keessaa ba'uu barbaaddaa?",
+	"mw-widgets-abandonedit-discard": "Gulaala gati",
 	"mw-widgets-abandonedit-keep": "Gulaaluu itti fufi",
-	"mw-widgets-abandonedit-title": "Ati mirkanoo?",
+	"mw-widgets-abandonedit-title": "Dhugaa jettaa?",
 	"mw-widgets-mediasearch-input-placeholder": "Miidiyaa barbaadi",
 	"mw-widgets-mediasearch-noresults": "Homtuu hin argamne",
 	"mw-widgets-titleinput-description-new-page": "Fuulli kun amma yoonaa hin jiru.",
