Add change tags for media additions/removals
This introduces 2 new tags to track changes in media usage
across articles. These tags are both hidden & disabled by
default.

Bug: T266067
Change-Id: Ia230eadf7dcf6f52facab17b92293f25de38bb1c

--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -3766,6 +3766,10 @@
 	"tag-mw-reverted-description": "Edits that were later reverted by a different edit",
 	"tag-mw-server-side-upload": "Server-side upload",
 	"tag-mw-server-side-upload-description": "Media files that were uploaded via a maintenance script",
+	"tag-mw-add-media": "-",
+	"tag-mw-add-media-description": "Edits that add media",
+	"tag-mw-remove-media": "-",
+	"tag-mw-remove-media-description": "Edits that remove media",
 	"tags-title": "Tags",
 	"tags-intro": "This page lists the tags that the software may mark an edit with, and their meaning.",
 	"tags-tag": "Tag name",
