--- a/languages/i18n/qqq.json
+++ b/languages/i18n/qqq.json
@@ -3988,6 +3988,10 @@
 	"tag-mw-reverted-description": "Description for \"reverted\" change tag",
 	"tag-mw-server-side-upload": "Change tag for media files uploaded via a maintenance script",
 	"tag-mw-server-side-upload-description": "Description for \"server-side upload\" change tag",
+	"tag-mw-add-media": "Change tag for edits that include additions of media",
+	"tag-mw-add-media-description": "Description for \"added media\" change tag",
+	"tag-mw-remove-media": "Change tag for edits that include removals of media",
+	"tag-mw-remove-media-description": "Description for \"removed media\" change tag",
 	"tags-title": "The title of [[Special:Tags]].\n{{Identical|Tag}}",
 	"tags-intro": "Explanation on top of [[Special:Tags]]. For more information on tags see [[mw:Manual:Tags|MediaWiki]].",
 	"tags-tag": "Caption of a column in [[Special:Tags]]. For more information on tags see [[mw:Manual:Tags|MediaWiki]].",
