Add change tag for media uploaded using importImages.php
Change-Id: I74a7d6f9e5e7bada4803f7e807c7c74d237e9d47

--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -3763,6 +3763,8 @@
 	"tag-mw-manual-revert-description": "Edits that manually restore the page to an exact previous state",
 	"tag-mw-reverted": "Reverted",
 	"tag-mw-reverted-description": "Edits that were later reverted by a different edit",
+	"tag-mw-server-side-upload": "Server-side upload",
+	"tag-mw-server-side-upload-description": "Media files that were uploaded via a maintenance script",
 	"tags-title": "Tags",
 	"tags-intro": "This page lists the tags that the software may mark an edit with, and their meaning.",
 	"tags-tag": "Tag name",
