--- a/languages/i18n/qqq.json
+++ b/languages/i18n/qqq.json
@@ -3983,6 +3983,8 @@
 	"tag-mw-undo-description": "Description for \"undo\" change tag",
 	"tag-mw-manual-revert": "Change tag for manually restoring the page to an exact previous state",
 	"tag-mw-manual-revert-description": "Description for \"manual revert\" change tag",
+	"tag-mw-server-side-upload": "Change tag for media files uploaded via a maintenance script",
+	"tag-mw-server-side-upload-description": "Description for \"server-side upload\" change tag",
 	"tag-mw-reverted": "Change tag for edits that were later reverted by a different edit",
 	"tag-mw-reverted-description": "Description for \"reverted\" change tag",
 	"tags-title": "The title of [[Special:Tags]].\n{{Identical|Tag}}",
