--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -662,7 +662,7 @@
 	"showdiff": "Show changes",
 	"blankarticle": "<strong>Warning:</strong> The page you are creating is blank.\nIf you click \"$1\" again, the page will be created without any content.",
 	"anoneditwarning": "<strong>Warning:</strong> You are not logged in. Your IP address will be publicly visible if you make any edits. If you <strong>[$1 log in]</strong> or <strong>[$2 create an account]</strong>, your edits will be attributed to your username, along with other benefits.",
-	"anonpreviewwarning": "<em>You are not logged in. Saving will record your IP address in this page's edit history.</em>",
+	"anonpreviewwarning": "<em>You are not logged in. Publishing will record your IP address in this page's edit history.</em>",
 	"missingsummary": "<strong>Reminder:</strong> You have not provided an edit summary.\nIf you click \"$1\" again, your edit will be published without one.",
 	"selfredirect": "<strong>Warning:</strong> You are redirecting this page to itself.\nYou may have specified the wrong target for the redirect, or you may be editing the wrong page.\nIf you click \"$1\" again, the redirect will be created anyway.",
 	"missingcommenttext": "Please enter a comment.",
@@ -703,10 +703,10 @@
 	"userpage-userdoesnotexist": "User account \"$1\" is not registered.\nPlease check if you want to create/edit this page.",
 	"userpage-userdoesnotexist-view": "User account \"$1\" is not registered.",
 	"blocked-notice-logextract": "This {{GENDER:$1|user}} is currently blocked.\nThe latest block log entry is provided below for reference:",
-	"clearyourcache": "<strong>Note:</strong> After saving, you may have to bypass your browser's cache to see the changes.\n* <strong>Firefox / Safari:</strong> Hold <em>Shift</em> while clicking <em>Reload</em>, or press either <em>Ctrl-F5</em> or <em>Ctrl-R</em> (<em>⌘-R</em> on a Mac)\n* <strong>Google Chrome:</strong> Press <em>Ctrl-Shift-R</em> (<em>⌘-Shift-R</em> on a Mac)\n* <strong>Internet Explorer / Edge:</strong> Hold <em>Ctrl</em> while clicking <em>Refresh</em>, or press <em>Ctrl-F5</em>\n* <strong>Opera:</strong> Press <em>Ctrl-F5</em>.",
-	"usercssyoucanpreview": "<strong>Tip:</strong> Use the \"{{int:showpreview}}\" button to test your new CSS before saving.",
-	"userjsonyoucanpreview": "<strong>Tip:</strong> Use the \"{{int:showpreview}}\" button to test your new JSON before saving.",
-	"userjsyoucanpreview": "<strong>Tip:</strong> Use the \"{{int:showpreview}}\" button to test your new JavaScript before saving.",
+	"clearyourcache": "<strong>Note:</strong> After publishing, you may have to bypass your browser's cache to see the changes.\n* <strong>Firefox / Safari:</strong> Hold <em>Shift</em> while clicking <em>Reload</em>, or press either <em>Ctrl-F5</em> or <em>Ctrl-R</em> (<em>⌘-R</em> on a Mac)\n* <strong>Google Chrome:</strong> Press <em>Ctrl-Shift-R</em> (<em>⌘-Shift-R</em> on a Mac)\n* <strong>Internet Explorer / Edge:</strong> Hold <em>Ctrl</em> while clicking <em>Refresh</em>, or press <em>Ctrl-F5</em>\n* <strong>Opera:</strong> Press <em>Ctrl-F5</em>.",
+	"usercssyoucanpreview": "<strong>Tip:</strong> Use the \"{{int:showpreview}}\" button to test your new CSS before publishing.",
+	"userjsonyoucanpreview": "<strong>Tip:</strong> Use the \"{{int:showpreview}}\" button to test your new JSON before publishing.",
+	"userjsyoucanpreview": "<strong>Tip:</strong> Use the \"{{int:showpreview}}\" button to test your new JavaScript before publishing.",
 	"usercsspreview": "<strong>Remember that you are only previewing your user CSS.\nIt has not yet been published!</strong>",
 	"userjsonpreview": "<strong>Remember that you are only testing/previewing your user JSON config.\nIt has not yet been published!</strong>",
 	"userjspreview": "<strong>Remember that you are only testing/previewing your user JavaScript.\nIt has not yet been published!</strong>",
@@ -734,7 +734,7 @@
 	"yourtext": "Your text",
 	"storedversion": "Stored revision",
 	"editingold": "<strong>Warning: You are editing an out-of-date revision of this page.</strong>\nIf you publish it, any changes made since this revision will be lost.",
-	"unicode-support-fail": "It appears that your browser does not support Unicode. It is required to edit pages, so your edit was not saved.",
+	"unicode-support-fail": "It appears that your browser does not support Unicode. It is required to edit pages, so your edit was not published.",
 	"yourdiff": "Differences",
 	"copyrightwarning": "Please note that all contributions to {{SITENAME}} are considered to be released under the $2 (see $1 for details).\nIf you do not want your writing to be edited mercilessly and redistributed at will, then do not submit it here.<br />\nYou are also promising us that you wrote this yourself, or copied it from a public domain or similar free resource.\n<strong>Do not submit copyrighted work without permission!</strong>",
 	"copyrightwarning2": "Please note that all contributions to {{SITENAME}} may be edited, altered, or removed by other contributors.\nIf you do not want your writing to be edited mercilessly, then do not submit it here.<br />\nYou are also promising us that you wrote this yourself, or copied it from a public domain or similar free resource (see $1 for details).\n<strong>Do not submit copyrighted work without permission!</strong>",
@@ -3179,7 +3179,7 @@
 	"tooltip-minoredit": "Mark this as a minor edit",
 	"tooltip-save": "Save your changes",
 	"tooltip-publish": "Publish your changes",
-	"tooltip-preview": "Preview your changes. Please use this before saving.",
+	"tooltip-preview": "Preview your changes. Please use this before publishing.",
 	"tooltip-diff": "Show which changes you made to the text",
 	"tooltip-compareselectedversions": "See the differences between the two selected revisions of this page",
 	"tooltip-watch": "Add this page to your watchlist",
@@ -4183,7 +4183,7 @@
 	"special-characters-title-endash": "en dash",
 	"special-characters-title-emdash": "em dash",
 	"special-characters-title-minus": "minus sign",
-	"mw-widgets-abandonedit": "Are you sure you want to leave editing mode without saving first?",
+	"mw-widgets-abandonedit": "Are you sure you want to leave editing mode without publishing first?",
 	"mw-widgets-abandonedit-discard": "Discard edits",
 	"mw-widgets-abandonedit-keep": "Continue editing",
 	"mw-widgets-abandonedit-title": "Are you sure?",
