Rename email-blacklist-label message
Bug: T277987
Change-Id: Ie8c031cccd48c8276ef5af73d49b544b0ab351dd

--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -1131,7 +1131,7 @@
 	"timezoneregion-pacific": "Pacific Ocean",
 	"allowemail": "Allow other users to email me",
 	"email-allow-new-users-label": "Allow emails from brand-new users",
-	"email-blacklist-label": "Prohibit these users from emailing me:",
+	"email-mutelist-label": "Prohibit these users from emailing me:",
 	"prefs-searchoptions": "Search",
 	"prefs-namespaces": "Namespaces",
 	"default": "default",
