Change "radio boxes" to "radio buttons" in histlegend message
The standard industry term is "radio button", and it's used
in other messages.

Change-Id: I3591e22bbf09e1ecd354212150f4585fb9282083

--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -863,7 +863,7 @@
 	"last": "prev",
 	"page_first": "first",
 	"page_last": "last",
-	"histlegend": "Diff selection: Mark the radio boxes of the revisions to compare and hit enter or the button at the bottom.<br />\nLegend: <strong>({{int:cur}})</strong> = difference with latest revision, <strong>({{int:last}})</strong> = difference with preceding revision, <strong>{{int:minoreditletter}}</strong> = minor edit.",
+	"histlegend": "Diff selection: Mark the radio buttons of the revisions to compare and hit enter or the button at the bottom.<br />\nLegend: <strong>({{int:cur}})</strong> = difference with latest revision, <strong>({{int:last}})</strong> = difference with preceding revision, <strong>{{int:minoreditletter}}</strong> = minor edit.",
 	"history-fieldset-title": "Filter revisions",
 	"history-show-deleted": "Revision deleted only",
 	"history_copyright": "-",
