--- a/includes/api/i18n/en.json
+++ b/includes/api/i18n/en.json
@@ -43,6 +43,7 @@
 	"apihelp-block-param-partial": "Block user from specific pages or namespaces rather than the entire site.",
 	"apihelp-block-param-pagerestrictions": "List of titles to block the user from editing. Only applies when <var>partial</var> is set to true.",
 	"apihelp-block-param-namespacerestrictions": "List of namespace IDs to block the user from editing. Only applies when <var>partial</var> is set to true.",
+	"apihelp-block-param-actionrestrictions": "List of actions to block the user from performing. Only applies when <var>partial</var> is set to true.",
 	"apihelp-block-example-ip-simple": "Block IP address <kbd>192.0.2.5</kbd> for three days with a reason.",
 	"apihelp-block-example-user-complex": "Block user <kbd>Vandal</kbd> indefinitely with a reason, and prevent new account creation and email sending.",
 
