--- a/includes/api/i18n/qqq.json
+++ b/includes/api/i18n/qqq.json
@@ -58,6 +58,7 @@
 	"apihelp-block-param-partial": "{{doc-apihelp-param|block|partial}}",
 	"apihelp-block-param-pagerestrictions": "{{doc-apihelp-param|block|pagerestrictions}}",
 	"apihelp-block-param-namespacerestrictions": "{{doc-apihelp-param|block|namespacerestrictions}}",
+	"apihelp-block-param-actionrestrictions": "{{doc-apihelp-param|block|actionrestrictions}}",
 	"apihelp-block-example-ip-simple": "{{doc-apihelp-example|block}}",
 	"apihelp-block-example-user-complex": "{{doc-apihelp-example|block}}",
 	"apihelp-changeauthenticationdata-summary": "{{doc-apihelp-summary|changeauthenticationdata}}",
