--- a/languages/i18n/qqq.json
+++ b/languages/i18n/qqq.json
@@ -3024,6 +3024,7 @@
 	"blocklist-editing-sitewide": "Used in [[Special:BlockList]] when a block is a sitewide block.",
 	"blocklist-editing-page": "Used in [[Special:BlockList]] when a partial block has page restrictions.",
 	"blocklist-editing-ns": "Used in [[Special:BlockList]] when a partial block has namespace restrictions.",
+	"blocklist-editing-action": "Used in [[Special:BlockList]] when a partial block has actions restrictions.",
 	"ipblocklist-empty": "Used in [[Special:BlockList]], if the target is not specified.\n\nSee also:\n* {{msg-mw|Ipblocklist-no-results}}",
 	"ipblocklist-no-results": "Used in [[Special:BlockList]], if the target is specified.\n\nSee also:\n* {{msg-mw|Ipblocklist-empty}}",
 	"blocklink": "Display name for a link that, when selected, leads to a form where a user can be blocked. Used in page history and recent changes pages. Example: \"''UserName (Talk | contribs | '''block''')''\".\n\nUsed as link title in [[Special:Contributions]] and in [[Special:DeletedContributions]].\n\nSee also:\n* {{msg-mw|Sp-contributions-talk}}\n* {{msg-mw|Change-blocklink}}\n* {{msg-mw|Unblocklink}}\n* {{msg-mw|Sp-contributions-blocklog}}\n* {{msg-mw|Sp-contributions-uploads}}\n* {{msg-mw|Sp-contributions-logs}}\n* {{msg-mw|Sp-contributions-deleted}}\n* {{msg-mw|Sp-contributions-userrights}}\n{{Identical|Block}}",
