Block Creating page action
Add an option to prevent creating page on partial block

Bug: T199918
Change-Id: I1668da6c299373fb838d860e15d9ffee7aa6a269

--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -2732,6 +2732,7 @@
 	"ipb-partial": "Partial",
 	"ipb-sitewide-help": "Every page on the wiki and all other contribution actions.",
 	"ipb-partial-help": "Specific pages or namespaces.",
+	"ipb-action-create": "Creating new pages",
 	"ipb-action-move": "Renaming pages",
 	"ipb-action-upload": "Uploading files",
 	"ipb-pages-label": "Pages",
