--- a/includes/api/i18n/en.json
+++ b/includes/api/i18n/en.json
@@ -1310,8 +1310,8 @@
 
 	"apihelp-query+usercontribs-summary": "Get all edits by a user.",
 	"apihelp-query+usercontribs-param-limit": "The maximum number of contributions to return.",
-	"apihelp-query+usercontribs-param-start": "The start timestamp to return from.",
-	"apihelp-query+usercontribs-param-end": "The end timestamp to return to.",
+	"apihelp-query+usercontribs-param-start": "The start timestamp to return from, i.e. revisions before this timestamp.",
+	"apihelp-query+usercontribs-param-end": "The end timestamp to return to, i.e. revisions after this timestamp.",
 	"apihelp-query+usercontribs-param-user": "The users to retrieve contributions for. Cannot be used with <var>$1userids</var> or <var>$1userprefix</var>.",
 	"apihelp-query+usercontribs-param-userprefix": "Retrieve contributions for all users whose names begin with this value. Cannot be used with <var>$1user</var> or <var>$1userids</var>.",
 	"apihelp-query+usercontribs-param-userids": "The user IDs to retrieve contributions for. Cannot be used with <var>$1user</var> or <var>$1userprefix</var>.",
