--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -3532,6 +3532,7 @@
 	"size-petabytes": "$1 PB",
 	"size-exabytes": "$1 EB",
 	"size-zetabytes": "$1 ZB",
+	"size-zettabytes": "$1 ZB",
 	"size-yottabytes": "$1 YB",
 	"size-pixel": "$1 {{PLURAL:$1|pixel|pixels}}",
 	"size-kilopixel": "$1 KP",
@@ -3541,6 +3542,7 @@
 	"size-petapixel": "$1 PP",
 	"size-exapixel": "$1 EP",
 	"size-zetapixel": "$1 ZP",
+	"size-zettapixel": "$1 ZP",
 	"size-yottapixel": "$1 YP",
 	"bitrate-bits": "$1 bps",
 	"bitrate-kilobits": "$1 kbps",
@@ -3550,6 +3552,7 @@
 	"bitrate-petabits": "$1 Pbps",
 	"bitrate-exabits": "$1 Ebps",
 	"bitrate-zetabits": "$1 Zbps",
+	"bitrate-zettabits": "$1 Zbps",
 	"bitrate-yottabits": "$1 Ybps",
 	"lag-warn-normal": "Changes newer than $1 {{PLURAL:$1|second|seconds}} may not be shown in this list.",
 	"lag-warn-high": "Due to high database server lag, changes newer than $1 {{PLURAL:$1|second|seconds}} may not be shown in this list.",
