--- a/languages/i18n/qqq.json
+++ b/languages/i18n/qqq.json
@@ -3756,6 +3756,7 @@
 	"size-petabytes": "{{optional}}\nSize (of a file, typically) in pebibytes (1 pebibytes = 1024×1024×1024×1024×1024 bytes).",
 	"size-exabytes": "{{optional}}\nSize (of a file, typically) in exbibytes (1 exbibytes = 1024×1024×1024×1024×1024×1024 bytes).",
 	"size-zetabytes": "{{optional}}\nSize (of a file, typically) in zebibytes (1 zebibytes = 1024×1024×1024×1024×1024×1024×1024 bytes).",
+	"size-zettabytes": "{{optional}}\nSize (of a file, typically) in zebibytes (1 zebibytes = 1024×1024×1024×1024×1024×1024×1024 bytes).",
 	"size-yottabytes": "{{optional}}\nSize (of a file, typically) in yobibytes (1 yobibytes = 1024×1024×1024×1024×1024×1024×1024×1024 bytes).",
 	"size-pixel": "Size (of a file, typically) in pixel.\n{{Identical|Pixel}}",
 	"size-kilopixel": "{{optional}}\nSize (of an image, typically) in kilopixels (1 kilopixel = 1000 pixel).",
@@ -3764,7 +3765,8 @@
 	"size-terapixel": "{{optional}}\nSize (of a file, typically) in terapixel (1 terapixel = 1000×1000×1000×1000 pixel).",
 	"size-petapixel": "{{optional}}\nSize (of a file, typically) in petapixel (1 petapixel = 1000×1000×1000×1000×1000 pixel).",
 	"size-exapixel": "{{optional}}\nSize (of a file, typically) in exapixel (1 exapixel = 1000×1000×1000×1000×1000×1000 pixel).",
-	"size-zetapixel": "{{optional}}\nSize (of a file, typically) in zetapixel (1 zetapixel = 1000×1000×1000×1000×1000×1000×1000 pixel).",
+	"size-zetapixel": "{{optional}}\nSize (of a file, typically) in zettapixel (1 zettapixel = 1000×1000×1000×1000×1000×1000×1000 pixel).",
+	"size-zettapixel": "{{optional}}\nSize (of a file, typically) in zettapixel (1 zettapixel = 1000×1000×1000×1000×1000×1000×1000 pixel).",
 	"size-yottapixel": "{{optional}}\nSize (of a file, typically) in yottapixel (1 yottapixel = 1000×1000×1000×1000×1000×1000×1000×1000 pixel).",
 	"bitrate-bits": "{{optional}}\nBitrate (of a file, typically) in bits.",
 	"bitrate-kilobits": "{{optional}}\nBitrate (of a file, typically) in kilobits (1 kilobit = 1000 bits).",
@@ -3773,7 +3775,8 @@
 	"bitrate-terabits": "{{optional}}\nBitrate (of a file, typically) in terabits (1 terabits = 1000×1000×1000×1000 bits).",
 	"bitrate-petabits": "{{optional}}\nBitrate (of a file, typically) in petabits (1 petabits = 1000×1000×1000×1000×1000 bits).",
 	"bitrate-exabits": "{{optional}}\nBitrate (of a file, typically) in exabits (1 exabits = 1000×1000×1000×1000×1000×1000 bits).",
-	"bitrate-zetabits": "{{optional}}\nBitrate (of a file, typically) in zetabits (1 zetabits = 1000×1000×1000×1000×1000×1000×1000 bits).",
+	"bitrate-zetabits": "{{optional}}\nBitrate (of a file, typically) in zettabits (1 zettabits = 1000×1000×1000×1000×1000×1000×1000 bits).",
+	"bitrate-zettabits": "{{optional}}\nBitrate (of a file, typically) in zettabits (1 zettabits = 1000×1000×1000×1000×1000×1000×1000 bits).",
 	"bitrate-yottabits": "{{optional}}\nBitrate (of a file, typically) in yottabits (1 yottabits = 1000×1000×1000×1000×1000×1000×1000×1000 bits).",
 	"lag-warn-normal": "Used as warning about replica lag. Parameters:\n* $1 - number of seconds\nSee also:\n* {{msg-mw|Lag-warn-high}}",
 	"lag-warn-high": "Used as warning about replica lag. Parameters:\n* $1 - number of seconds\nSee also:\n* {{msg-mw|Lag-warn-normal}}",
