--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -1631,7 +1631,7 @@
 	"rcfilters-watchlist-edit-watchlist-button": "Edit your list of watched pages",
 	"rcfilters-watchlist-showupdated": "Changes to pages you haven't visited since the changes occurred are in <strong>bold</strong>, with solid markers.",
 	"rcfilters-preference-label": "Use non-JavaScript interface",
-	"rcfilters-preference-help": "Loads RecentChanges without filters search or highlighting functionality.",
+	"rcfilters-preference-help": "Loads RecentChanges, Watchlist, and similar pages without the filtered search or the highlighting functionality.",
 	"rcfilters-watchlist-preference-label": "Use non-JavaScript interface",
 	"rcfilters-watchlist-preference-help": "Loads Watchlist without filters search or highlighting functionality.",
 	"rcfilters-filter-showlinkedfrom-label": "Show changes on pages linked from",
